        PR c++/16015         * gimplify.c (gimplify_target_expr): Handle void initializer.         * expr.c (expand_expr_real_1) [TARGET_EXPR]: Likewise.         * doc/c-tree.texi (Expression trees): Update TARGET_EXPR         and AGGR_INIT_EXPR.         * cp/semantics.c (simplify_aggr_init_expr): Don't return the slot.         (finish_stmt_expr_expr): Update type after conversions.         (finish_stmt_expr): Wrap initializer in CLEANUP_POINT_EXPR.         Handle void initializer.         * cp/tree.c (build_cplus_new): Make AGGR_INIT_EXPRs void.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@83320 138bc75d-0d04-0410-961f-82ee72b054a4